# nexus

./: .gitignore  Cargo.toml  README.md  publish.sh
.github/workflows/: ci.yaml  python-release.yaml
crates/examples2d/: Cargo.toml  dynamic_rbd2.rs
crates/examples3d/: Cargo.toml  all_examples3.rs  bench_batch_sweep3.rs  bench_mjcf3.rs  dynamic_rbd3.rs  mujoco_menagerie3.rs  test_warmstart3.rs
crates/nexus2d/: Cargo.toml
crates/nexus3d/: Cargo.toml
crates/nexus3d/examples/: gravity.rs  gravity.wgsl
crates/nexus_python3d/: Cargo.toml
crates/nexus_python3d/src/: nexus.rs  rbd.rs  viewer.rs
crates/nexus_rbd2d/: Cargo.toml
crates/nexus_rbd3d/: Cargo.toml
crates/nexus_rbd_shaders2d/: Cargo.toml
crates/nexus_rbd_shaders3d/: Cargo.toml
crates/nexus_viewer2d/: Cargo.toml
crates/nexus_viewer3d/: Cargo.toml
shaders/nexus/: aliases.slang
shaders/nexus/dynamics/: body.slang  integrate.wgsl
shaders/nexus/queries/: projection.slang  ray.slang
shaders/nexus/shapes/: ball.slang  capsule.slang  cone.slang  cuboid.slang  cylinder.slang  segment.slang  shape.slang  triangle.slang
src/: lib.rs  shapes.rs  state.rs
src/dynamics/: body.rs  integrate.rs  mod.rs
src_rbd/: lib.rs
src_rbd/broad_phase/: lbvh.rs  narrow_phase.rs
src_rbd/dynamics/: coloring.rs  joint.rs  mod.rs  mprops_update.rs  solver.rs  warmstart.rs
src_rbd/dynamics/multibody/: loop_closing_joints.rs  mod.rs  multibody_from_rapier.rs  multibody_set.rs  multibody_solver.rs
src_rbd/pipeline/: insertion_removal.rs  lbvh_validation.rs  rbd_state.rs  rbd_state_from_rapier.rs  rbd_step.rs
src_rbd/queries/: contact.rs
src_rbd/shapes/: shape.rs
src_rbd/utils/: prefix_sum.rs
src_rbd/utils/radix_sort/: mod.rs
src_rbd_shaders/: lib.rs
src_rbd_shaders/bounding_volumes/: aabb.rs
src_rbd_shaders/broad_phase/: lbvh.rs  mod.rs  narrow_phase.rs
src_rbd_shaders/dynamics/: color_buckets.rs  coloring.rs  constraint.rs  joint.rs  joint_constraint.rs  joint_constraint_builder.rs  mod.rs  mprops_update.rs  sim_params.rs  solver.rs  solver_utils.rs  warmstart.rs
src_rbd_shaders/dynamics/multibody/: compute_dynamics_pre.rs  contact_constraints.rs  gravity_and_lu.rs  integrate.rs  jacobian.rs  joint_constraints.rs  lu.rs  mass_matrix.rs  mod.rs  solve_constraints.rs  types.rs  utils.rs  ws_soa.rs
src_rbd_shaders/dynamics/multibody/impulse_joint_constraints/: helper.rs  jacobians.rs  kernels.rs  mod.rs  types.rs  update.rs
src_rbd_shaders/queries/: contact.rs  contact_pfm_pfm.rs  polygonal_feature.rs  ray.rs  sat.rs
src_rbd_shaders/queries/gjk/: cso_point.rs  epa2.rs  epa3.rs  gjk.rs  voronoi_simplex2.rs  voronoi_simplex3.rs
src_rbd_shaders/shapes/: convex_polyhedron.rs  polyline.rs  segment.rs  shape.rs  triangle.rs  trimesh.rs
src_rbd_shaders/tests/: epa.rs  gjk.rs  pfm_pfm.rs
src_rbd_shaders/utils/: indices.rs  linalg.rs  mod.rs  prefix_sum.rs  slice.rs
src_rbd_shaders/utils/radix_sort/: init_indirect_dispatches.rs  sort_count.rs  sort_reduce.rs  sort_scan.rs  sort_scan_add.rs  sort_scatter.rs  sorting.rs
src_viewer/: graphics.rs  ui.rs  viewer.rs
