[workspace]
members = [
    "crates/nexus2d",
    "crates/nexus3d"
]
resolver = "2"

[workspace.dependencies]
nalgebra = { version = "0.34.1", features = ["convert-bytemuck", "encase"] }
bytemuck = { version = "1", features = ["derive", "extern_crate_std"] }
futures = "0.3"

stensor = "0.2"
slang-hal = "0.2"

# TODO: make the wgpu dependency optional too (all backends should be optional but with
#       wgpu enabled by default).
wgpu = { version = "27", features = ["naga-ir"] }
encase = "0.12"

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2", "dim3"))'
] }

[profile.release]
opt-level = 'z'

[patch.crates-io]
#stensor = { path = "../stensor" }
#encase = { path = "../encase" }
#shader-slang = { path = "../slang-rs" }
#minislang = { path = "../slmath/crates/minislang" }
#slang-hal-derive = { path = "../slmath/crates/slang-hal-derive" }
#slang-hal = { path = "../slmath/crates/slang-hal" }
