[package]
name = "nexus2d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform 2D rigid-body physics."
repository = "https://github.com/dimforge/nexus"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "nexus2d"
path = "../../src/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2"]
dim2 = []

comptime = [ "stensor/comptime" ]
runtime = [ "stensor/runtime" ]

webgpu = [ "stensor/webgpu" ]
vulkan = [ "stensor/vulkan" ]
metal = [ "stensor/metal" ]
cpu = [ "stensor/cpu" ]
cuda = [ "stensor/cuda" ]

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true }
encase = { workspace = true }
bytemuck = { workspace = true }
slang-hal = { workspace = true }
stensor = { workspace = true }
rapier2d = "0.31" # TODO: should be behind a feature?
num-traits = "0.2"

[build-dependencies]
stensor = "0.2" # To access its shaders at compile-time.
include_dir = "0.7"
slang-hal-build = "0.2"

[dev-dependencies]
nalgebra = { version = "0.34", features = ["rand"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
